Add guide for PR
Fixes #1

Add a new guide page for contributing to the project.

* **Guide Component**: Create a new `Guide` component in `src/pages/Guide.tsx` with a detailed guide for contributing, including image URLs for each step.
* **App Component**: Import the `Guide` component in `src/App.tsx`, add a route for the `Guide` component, and update the navigation to include a link to the guide.
* **Projects Data**: Add a new project entry for the guide in `src/data/projects.json`.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -42,6 +42,16 @@
       "description": "Simple bot that murders people, fun.",
       "imageUrl": "https://images.unsplash.com/photo-1588597575483-f4e43e191c94?w=800&q=80",
       "tags": ["Kill", "Every", "Human"]
+    },
+    {
+      "id": "6",
+      "name": "Guide to Contributing",
+      "description": "A detailed guide for beginners on how to contribute to the project.",
+      "imageUrl": "https://example.com/guide-image.jpg",
+      "tags": ["Guide", "Beginner", "Contribution"],
+      "rank": "🎖️",
+      "githubUrl": "https://github.com/DefinetlyNotAI/Scrapyard_Showcase",
+      "demoUrl": "https://example.com/guide-demo"
     }
   ]
 }
